--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <nav>
 	<ul>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="#">Schedule</a></li>
 		<li><a href="#">Tickets</a></li>
-		<li><a href="#">Contact</a></li>
+		<li><a href="#">Schedule</a></li>
+		<li><a href="#">Roster</a></li>
+		<li><a href="#">Videos</a></li>
 </nav>
 
 
