Updated header text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- Hero image START. -->
 	<div class="hero-image">
 		<div class="hero-text">
-			<h1 class="hero-heading">SEE RED</h1>
+			<h1 class="hero-heading">Chicago Cubs</h1>
 			<p class="hero-description">Get your 2021 season tickets now!</p>
 			<a href="purchase.html">
 			<button class="hero-button">Purchase Tickets Now</button>
