--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@ Column 1
 <div class="one-half">
 Column 2
 </div> 
-	
+
+<div class="footer-section">
+	<p>Contact Us</p>	
+</div>	
 </footer>
 
 
